<resources>
    <string name="app_name">My Food App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ng_k_t_i_kho_n">FOOD TTAQ</string>
    <string name="yeuthich">Yêu thích</string>
    <string name="monan">Món ăn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="giohang">Giỏ hàng</string>
    <string name="ttaq">TTAQ</string>
    <string name="ttaq_gmail_com">ttaq@gmail.com</string>
    <string name="timkiem">Tìm kiếm món ăn</string>
    <string name="your_favourite_and_testy_food_is_here">your favourite and testy food is here!</string>
    <string name="view_more">view more</string>
    <string name="make_order">Make Order</string>
    <string name="my_cart">My Cart</string>
    <string name="l_ch_s">Lịch sử</string>
    <string name="t_y_ch_nh">Tùy chỉnh</string>
</resources>