<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_monan"
            android:icon="@drawable/baseline_fastfood_24"
            android:title="@string/monan" />
        <item
            android:id="@+id/nav_yeuthich"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/yeuthich" />
        <item
            android:id="@+id/nav_giohang"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/giohang" />
        <item
            android:id="@+id/nav_lichsu"
            android:icon="@drawable/baseline_history_24"
            android:title="@string/l_ch_s" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/baseline_admin_panel_settings_24"
            android:title="Trạng thái" />
    </group>
</menu>