<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myfoodapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_monan"
        android:name="com.example.myfoodapp.ui.dailymeal.GalleryFragment"
        android:label="@string/monan"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_yeuthich"
        android:name="com.example.myfoodapp.ui.favourite.SlideshowFragment"
        android:label="@string/yeuthich"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_lichsu"
        android:name="com.example.myfoodapp.ui.history.HistoryFragment"
        android:label="Lịch sử đặt hàng"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_giohang"
        android:name="com.example.myfoodapp.ui.MyCartFragment"
        android:label="@string/giohang"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_admin"
        android:name="com.example.myfoodapp.ui.status.StatusFragment"
        android:label="Trạng thái"
        tools:layout="@layout/fragment_status" />
</navigation>